# cooking_mcp

./: .env.example  .env.railway  .env.render  .env.staging  .gitignore  AI_LLM_RECOMMENDATIONS.md  CLAUDE.md  CLAUDE_FAMILY.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  Dockerfile  Dockerfile.prod  PROMPT.md  README.md  SLACK_SETUP.md  SPEC.md  STANDARDS.md  alembic.ini  docker-compose.family.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  slack_manifest.json  test_mcp_compliance.py  test_mcp_minimal.py
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 001_20241117_1200_initial_schema.py
app/: main.py
app/middleware/: __init__.py  rate_limiting.py
app/models/: __init__.py  feedback.py  mcp.py  notebook.py
app/routers/: auth.py  feedback.py  health.py  mcp.py  notifier.py  scheduler.py  slack.py
app/services/: __init__.py  auth.py  email_service.py  feedback_normalizer.py  feedback_service.py  git_service.py  mcp_server.py  notebook_service.py  notifier_service.py  scheduler_service.py  search_service.py  signal_service.py  slack_service.py  sms_service.py  telegram_service.py  whatsapp_service.py
app/utils/: auth.py  config.py  logging.py
k8s/base/: app.yaml  configmap.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.yaml
monitoring/: prometheus.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
scripts/: backup-family.sh  backup.sh  deploy.sh  postgres-init.sh
security/: auth.py
tests/: conftest.py  test_auth.py  test_core.py  test_deployment_readiness.py  test_health.py  test_models.py  test_routers.py  test_services.py
